update lab3 report

--- a/Lab3/Report/main.tex
+++ b/Lab3/Report/main.tex
@@ -67,6 +67,7 @@
 \newlength{\vrefheight}
 \settoheight{\vrefheight}{\includegraphics{images/Inverting-Schmitt-Trigger-Vref-Circuit.png}}
 
+\setlength {\marginparwidth }{2cm} 
 %*******************************************************************************%
 %************************************START**************************************%
 %*******************************************************************************%
@@ -231,7 +232,7 @@ From figure \ref{fig:$V_{ref}$ from waveform for inverting schmitt trigger}, $|V
 Like the inverting Schmitt trigger, the non-inverting configuration also exhibits hysteresis behavior, resulting in two distinct threshold levels for switching the output between high and low states. These threshold levels are determined by the resistor values in the feedback network and the input resistors' ratio.
 \[ |V_{ref}| = \frac{R_{1}}{R_{2}}  \times V_{ss}\]
 Thus, \(|V_{ref}|=\frac{1k}{10k}\times8.5=850mV\). \\
-From figure \ref{fig:$V_{ref}$ from waveform for non-inverting schmitt trigger}, $|V_{ref}|=850mV$ which is near the theoretical value.
+From figure \ref{fig:$V_{ref}$ from waveform for non-inverting schmitt trigger}, $|V_{ref}|=840mV$ which is near the theoretical value.
 
 \newpage
 
@@ -292,7 +293,7 @@ From figure \ref{fig:T from waveform for astable multivibrator as square wave ge
 Like the Schmitt trigger, the astable multivibrator also exhibits hysteresis behavior, resulting in two distinct threshold levels for switching the output between high and low states. These threshold levels are determined by the resistor values in the feedback network and the input resistors' ratio.
 \[ |V_{ref}| = \frac{R_{1}}{R_{1} + R_{2}}  \times V_{ss}\]
 Thus, $|V_{ss}|=8.5$ and \(|V_{ref}|=\frac{10k}{10k+2.2k}\times8.5=6.97V\). \\
-From figure \ref{fig:$V_{ref}$ from waveform for astable multivibrator as square wave generator}, $|V_{ref}|=7.3V$ which is near the theoretical value.
+From figure \ref{fig:$V_{ref}$ from waveform for astable multivibrator as square wave generator}, $|V_{ref}|=6.95V$ which is near the theoretical value.
 
 \newpage
 
